--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/lbthomsen/sitemap#readme",
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-resource": "^1.6.6",
     "angular-xml": "^2.2.2",
     "bootstrap": "^3.3.7",
     "x2js": "^3.1.1"
