--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feed-analyzer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Quick and Dirty Feed analyzer",
   "main": "app.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-resource": "^1.6.6",
+    "angular-route": "^1.6.6",
     "angular-xml": "^2.2.2",
     "bootstrap": "^3.3.7",
     "x2js": "^3.1.1"
